--- a/estilos.css
+++ b/estilos.css
@@ -5,3 +5,11 @@
     padding:10% 20% 35% 30%;  
     /*PADDING ARRIBA - ABAJO - DERECHA- IZQUIERDA */
 }
+
+.fondo1{
+    background-image: url("./img/bosquesudamerica.jpg");
+    background-position: top center;
+    background-size: cover;
+    padding:10% 20% 35% 30%;  
+    /*PADDING ARRIBA - ABAJO - DERECHA- IZQUIERDA */
+}
